styled questions as requested